<resources>
    <string name="app_name">MGE Projekt</string>
    <string name="title_de">Rechner</string>
    <string name="first_number_de">Erste nummer</string>
    <string name="second_number_de">Zweite nummer</string>
    <string name="calculate_button_text_de">Kalkulieren</string>
    <string name="result_hint_de">Resultat</string>
    <string name="history_hint_de">Verlauf</string>
    <string name="history_activity_title_de">Verlauf</string>
    <string name="addition_activity_title_de">Addition</string>
    <string name="first_number_error_message_de">Erste Nummer kann nicht Leer sein</string>
    <string name="second_number_error_message_de">Zweite Nummer kann nicht Leer sein</string>
    <string name="subtraction_activity_title_de">Subtraktion</string>
    <string name="division_activity_title_de">Division</string>
    <string name="multiplication_activity_title_de">Multiplikation</string>
    <string name="settings_title_de">Einstellungen</string>
    <string name="dark_mode_switch_text">Dark mode</string>
    <string name="color_picker_button_text_de">Farbe wählen</string>
    <string name="color_pciker_dialog_cancel_de">Abbrechen</string>
    <string name="color_picker_dialog_save_de">Speichern</string>
    <string name="color_picker_dialog_title_de">UI Farbe wählen</string>
    <string name="color_picker_dialog_seek_bar_red">Rot</string>
    <string name="color_picker_dialog_seek_bar_green">Grün</string>
    <string name="color_picker_dialog_seek_bar_blue">Blau</string>
    <string name="color_picker_dialog_notice_text">Um die Farbe der Applikation erfolgleich zu ändern muss die Applikation neu gestartet werden</string>
    <string-array name="languages_array">
        <item>English</item>
        <item>German</item>
        <item>Italian</item>
    </string-array>
    <string name="application_restart_toast">Die Applikation wird neu gestartet</string>
    <string name="channel_name" translatable="false">MGE_project_notification_channel</string>
    <string name="channel_description" translatable="false">Channel for the notifications of the MGE calculator app</string>
    <string name="Notification_title_de">Herzlich Wilkommen</string>
    <string name="greeting_notification_text_de">Herzlich sie wieder zu sehen. Heute ist der</string>
</resources>