<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SubtractionActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtraction_activity_title_de"
                    android:textSize="30sp">

                </TextView>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/firstNumber"
                android:layout_weight="1"
                android:hint="@string/first_number_de"
                android:inputType="numberDecimal"
                android:tooltipText="@string/first_number_de" />

            <EditText
                android:id="@+id/secondNumber"
                android:layout_weight="1"

                android:hint="@string/second_number_de"
                android:inputType="numberDecimal"
                android:tooltipText="@string/first_number_de" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/calculateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calculate_button_text_de">

                </androidx.appcompat.widget.AppCompatButton>
            </LinearLayout>


        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/result_hint_de"
        android:padding="20dp"
        android:singleLine="false"/>


</LinearLayout>