<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SettingsActivity">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_title_de"
                    android:textSize="30sp">
                </TextView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="40dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/theme_switch"
                android:text="@string/dark_mode_switch_text"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="10dp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/notification_switch"
                android:text="Greeting notification"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/color_picker_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_picker_button_text_de">

                </androidx.appcompat.widget.AppCompatButton>

        </TableRow>

    </TableLayout>